# robocon-library

./: CMakeLists.txt
BSP/: bsp.stepper.hpp  bsp_async.cpp  bsp_async.hpp  bsp_gpio_pin.hpp  bsp_iic.hpp  bsp_ir.hpp  bsp_mpu6050.hpp  bsp_ps2.cpp  bsp_ps2.hpp  bsp_servo.hpp  bsp_stepper.hpp  bsp_utility.hpp
Components/: bsp_ps2.cpp  bsp_ps2.hpp  clock.hpp  function.hpp  kalman_filter.hpp  pid_controller.hpp
DSP/: matrix.hpp
Modules/: DC gear motor.cpp  DC gear motor.hpp  chassis_kinematics.hpp  transfer_protocol.hpp
docs/BSP/: bsp.stepper.md  bsp_can.md  bsp_dma.md  bsp_gpio_pin.md  bsp_ps2.md  bsp_spi.md  bsp_stepper.md  bsp_timer.md  bsp_uart.md  bsp_utility.md
docs/Components/: kalman_filter.md
docs/DSP/: matrix.md
test/: QUICKSTART.md  README.md  dma_integration_example.cpp  dma_test.cpp  test.cpp
